<resources>
    <string name="app_name">ScanServiceV1.1.0</string>
    <string name="tv_instruction">This is the scan service app, Please do not uninstall it!</string>
    <string name="info_success">Success</string>
    <string name="info_failed">Faild</string>
    <string name="info_validation_success">Validation Succeeds</string>
    <string name="info_validation_failed">Validation Failed</string>
    <string name="hard_scan">Hard Scan</string>
    <string name="soft_scan">Soft Scan</string>
    <string name="main_two_scan">TwoDScan</string>
    <string name="scan_setup">Scan Setup</string>
    <string name="scan_suffix">Scan Suffix(Quick scan, BroadCast Mode)</string>
    <string name="custom_prefix">custom prefix</string>
    <string name="custom_suffix">custom suffix</string>
    <string name="save_custom_predix_suffix">save prefix suffix</string>
    <string name="scan_suffix_enter">Enter</string>
    <string name="scan_suffix_semicolon">Semicolon</string>
    <string name="scan_suffix_tab">TAB</string>
    <string name="scan_suffix_none">None</string>
    <string name="scan_net_page_support">Support Net Page</string>
    <string name="scan_continue_start_scan">Start Scan</string>
    <string name="scan_continuse_scan_set">Please setup how long scan one time(ms)</string>
    <string name="scan_choice_info">Please choice the Scanning device type</string>
    <string name="scan_type_null">MODEL_UNKONW</string>
    <string name="chaobiao_continue_start">Start meter reading</string>
    <string name="chaobiao_continuse_set">Please setup how long meter reading one time(ms)</string>
    <string name="button_electric">MeterReading</string>
    <string name="UHF">UHF</string>
    <string name="electrictorch">Flash</string>
    <string name="flash">Electric Torch</string>
    <string name="position">Position</string>
    <string name="app_nameNoV">HT380D_Tester</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Scan</string>
    <string name="hex">Hex</string>
    <string name="please_input_hex_str">Please Input Hex String,such as:FFF23F0F请输入16进制字符串，如FFF23F0F</string>
    <string name="tip">Please align the light.</string>
    <string name="data">data:</string>
    <string name="scan_out_mode">Scan Out Mode</string>
    <string name="scan_out_mode_1">Quick Scan</string>
    <string name="scan_out_mode_2">Simulation Keyboard</string>
    <string name="scan_out_mode_3">BroadCast</string>
    <string name="scan_effect">Scan Effect</string>
    <string name="scan_effect_sound">Sound Effect</string>
    <string name="scan_effect_vibration">Vibration Effect</string>
    <string name="scan_shortcut_support">Support Scan Button</string>
    <string name="scan_shortcut_mode">Scan Button Keypress Mode</string>
    <string name="shortcut_mode_1">Stop Scanning After 3 Seconds</string>
    <string name="shortcut_mode_2">Stop Scanning When Press Up</string>
    <string name="scan_shortcut_1">Left Orange Key</string>
    <string name="scan_shortcut_2">Middle Orange Key</string>
    <string name="scan_shortcut_3">Right Orange Key</string>
    <string name="scan_start_open_support">Support Starting Up the Scan Service</string>
    <string name="scan_model">Select The Scanner Model</string>
    <string name="scan_model_em3070">em3070</string>
    <string name="scan_model_em3095">em3095</string>
    <string name="scan_model_n4313">n4313</string>
    <string name="scan_model_se955">se955</string>
    <string name="scan_save_txt_support">Support Save in TXT(/sdcard/Scan Record)</string>
    <string name="scan_record">Scan Record</string>
    <string name="scan_test">Scan Result</string>
    <string name="scan_result_count">Count Analyzing</string>
    <string name="scan_time">Scan time</string>
    <string name="scan_return_factory">Return Factory</string>
    <string name="scan_model_tpey">Scanning engine type</string>
    <string name="scan_model_one">One-dimensional scanning engine</string>
    <string name="scan_model_two">Two-dimensional scanning engine</string>
    <string name="scan_model_nofind_info">NOT Find FAT!</string>
    <string name="scan_init_failure_info">Scanner init failured , Please Retry!</string>
    <string name="nfc_out_mode_1">Edittext Out</string>
    <string name="nfc_out_mode_2">Simulate keyboard Out</string>
    <string name="simpleic_test">Simple IC((UART))</string>
    <string name="simple_reset">Reset</string>
    <string name="simple_test1">Read 8 bytes Chip Serial Number</string>
    <string name="simple_test2">Read 1 byte Chip states</string>
    <string name="simple_test3">Read 4 byte infrared Surplus Certification number</string>
    <string name="simple_test4">Read Chip Random Number</string>
    <string name="simple_result">Result</string>
    <string name="power_tesam_no">Get T-ESAM Number</string>
    <string name="power_tesam_counter">Get T-ESAM Counter</string>
    <string name="power_tesam_checkstate">Check T-ESAM State</string>
    <string name="power_tesam_certificate">Get T-ESAM Certificate</string>
    <string name="power_tesam_version">Get T-ESAM Version</string>
    <string name="power_sercurity">Power Sercurity</string>
    <string name="power_sercurity_checkstate">Check State</string>
    <string name="power_sercurity_checkversion">Check Version</string>
    <string name="power_sercurity_checkcard1">Check Salesman Card</string>
    <string name="power_sercurity_checkcard2">Check Operator Card</string>
    <string name="power_sercurity_success">Read Card Number Success</string>
    <string name="info_abnormal">Abnormal</string>
    <string name="power_sercurity_checkcard3">The Power-Sercurity synchronization with Business Card</string>
    <string name="power_synchronize_success">Synchronize Success</string>
    <string name="hascard1">have card1</string>
    <string name="nocard1">no card1</string>
    <string name="hascard2">have card2</string>
    <string name="nocard2">no card2</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="text_choose_key_file">Choose some key file(s):</string>
    <string name="text_wait_read_tag">Reading tag&#8230;\n(Don\'t remove tag)</string>
    <string name="text_key_map_progress">Key Mapping Progress:</string>
    <string name="text_sector">Sector</string>
    <string name="text_block">Block</string>
    <string name="text_caption_title">Caption</string>
    <string name="text_keya">KeyA</string>
    <string name="text_keyb">KeyB</string>
    <string name="text_ac">ACs</string>
    <string name="text_uid">UID</string>
    <string name="text_uid_and_manuf">UID &amp; ManufInfo</string>
    <string name="text_valueblock">ValueBlock</string>
    <string name="text_chooser_info_text">Choose a file:</string>
    <string name="text_open_dump_title">Open Tag Dump</string>
    <string name="text_no_files_in_chooser">No files found</string>
    <string name="text_ac_read">Read:</string>
    <string name="text_ac_write">Write:</string>
    <string name="text_ac_incr">Incr.:</string>
    <string name="text_ac_decr">Decr./Trans./Rest.:</string>
    <string name="text_ac_pos">Location:</string>
    <string name="text_ac_error">Error: This configuration
        is not known</string>
    <string name="text_vb_what">What:</string>
    <string name="text_vb_value">Value:</string>
    <string name="text_vb_orig">Original:</string>
    <string name="text_vb_as_int_decoded">As Integer:</string>
    <string name="text_sector_range">Create Map for Sectors:</string>
    <string name="text_sector_range_all">All</string>
    <string name="text_update_colors">Update Colors</string>
    <string name="text_data">Data:</string>
    <string name="text_write_dump_info">Write a dump (or some sectors of it) to
        a tag. Blocks containing unknown data (---) will be skipped!</string>
    <string name="text_factory_format_info">Try to format the tag to
        factory/delivery state</string>
    <string name="text_starting_at_0">(Starting at 0)</string>
    <string name="text_open_key_file_title">Open or Create a Key File</string>
    <string name="text_choose_dump_to_write">Choose the dump to be written:</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="text_key_a">Key A</string>
    <string name="text_key_b">Key B</string>
    <string name="text_key_ab">Key A|B</string>
    <string name="text_never">Never</string>
    <string name="text_keys_not_known">Keys (A and B) not known</string>
    <string name="text_block_read_only">Block is read-only</string>
    <string name="text_write_key_a_not_known">Key with write access (A)
        not known</string>
    <string name="text_write_key_b_not_known">Key with write access (B)
        not known</string>
    <string name="text_ac_read_only">Access Conditions are read-only</string>
    <string name="text_keys_read_only">Keys (A and B) are read-only</string>
    <string name="text_invalid_ac_or_sector_dead">Invalid Access Conditions or
        dead sector :(</string>
    <string name="text_strange_error">Some strange error occurred :(</string>
    <string name="text_no_mfc_support_device">This device does not
        support Mifare Classic!</string>
    <string name="text_no_mfc_support_tag">Not a Mifare Classic tag!</string>
    <string name="text_no_tag">There is no Mifare Classic tag.</string>
    <string name="text_generic_info">Generic Info</string>
    <string name="text_mf_info">Mifare Classic Info</string>
    <string name="text_rf_tech">RF Technology</string>
    <string name="text_rf_tech_14a">ISO/IEC 14443, Type A</string>
    <string name="text_atqa">ATQA</string>
    <string name="text_sak">SAK</string>
    <string name="text_ats">ATS</string>
    <string name="text_tag_type_and_manuf">Tag Type and Manufacturer</string>
    <string name="text_tag_type_guess">\"Tag Type and Manufacturer\" might be
        wrong.\nSee \"Help and Info\" for more information.</string>
    <string name="text_mem_size">Memory Size</string>
    <string name="text_block_size">Block Size</string>
    <string name="text_sector_count">Number of Sectors</string>
    <string name="text_block_count">Number of Blocks</string>
    <string name="text_vb">VB:</string>
    <string name="text_vb_as_int">VB as Int:</string>
    <string name="text_addr">Addr:</string>
    <string name="text_copy">Copy</string>
    <string name="text_paste">Paste</string>
    <string name="text_share_subject_dump">MCT Dump</string>
    <string name="text_share_subject_key_file">MCT Key File</string>
    <string name="text_option_info">Info to option</string>
    <string name="text_static_ac_default">08778F</string>
    <string name="text_no_key_io_error">No keys found (or dead sector)</string>
    <string name="text_ac_label">ACs:</string>
    <string name="text_block_0">Block 0 (0-4):</string>
    <string name="text_block_1">Block 1 (5-9):</string>
    <string name="text_block_2">Block 2 (10-14):</string>
    <string name="text_block_3">Block 3 (15) - Sector Trailer:</string>
    <string name="text_step_1_sector_trailer">Step 1:
        Choose ACs for Sector Trailer</string>
    <string name="text_step_2_data_blocks">Step 2:
        Choose ACs for Data Blocks</string>
    <string name="action_read_write">Read/Write S50/S70 Card</string>
    <string name="action_read_tag">Read Tag</string>
	<string name="large_data_display">Large Data Display</string>
	<string name="low_contrast_mode">Low Contrast Mode</string>
	<string name="vibrate_on_scan">Vibrate On Scan</string>
	<string name="continuous_scan_mode">Continuous Scan</string>
	<string name="focus">Focus</string>
	<string name="resolution">Resolution</string>
	<string name="illumination">Illumination</string>
	<string name="symbologies">Symbologies</string>
	<string name="debug_mode">Save images for debugging</string>
	<string name="debug_level">Debug Log</string>
	<string name="camera_type">Camera Type</string>
</resources>