<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/scan_setup"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/black" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_start_open_support"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cb_scan_start_open_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_start_open_support"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/black" />
                
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_out_mode"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rg_outmode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/rd_scan_out_mode_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_out_mode_1"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rd_scan_out_mode_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_out_mode_2"
                android:textColor="@android:color/black"
                android:textSize="14sp" 
                android:visibility="gone"/>

            <RadioButton
                android:id="@+id/rd_scan_out_mode_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_out_mode_3"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/black" />
               
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_effect"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_scan_effect_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_effect_sound"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/cb_scan_effect_vibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_effect_vibration"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/black" />
                
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_suffix"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
	            <RadioButton
	                android:id="@+id/scan_setup_enter_rb"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:text="@string/scan_suffix_enter"
	                android:textColor="@android:color/black"
	                android:textSize="10sp" />
	
	            <RadioButton
	                android:id="@+id/scan_setup_semicolon_rb"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1.35"
	                android:text="@string/scan_suffix_semicolon"
	                android:textColor="@android:color/black"
	                android:textSize="10sp" />
	            
	            <RadioButton
	                android:id="@+id/scan_setup_tab_rb"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1.35"
	                android:text="@string/scan_suffix_tab"
	                android:textColor="@android:color/black"
	                android:textSize="10sp" />
	                        
	            <RadioButton
	                android:id="@+id/scan_setup_none_rb"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:text="@string/scan_suffix_none"
	                android:textColor="@android:color/black"
	                android:textSize="10sp" />
        </RadioGroup>

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_prefix"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/etCustomPrefix"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:singleLine="true"/>
       <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_suffix"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/etCustomSuffix"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:singleLine="true"/>
        
        <Button
            android:id="@+id/saveCustomPredixSuffix"
            android:layout_width="match_parent"
            android:text="@string/save_custom_predix_suffix"
            android:layout_height="50dip"/>

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/black" />

     </LinearLayout>
</ScrollView>